// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[` POST /admin/products/export should export a csv file containing the expected products 1`] = `
[
  {
    "Product Collection Id": "<ID>",
    "Product Created At": "<DateTime>",
    "Product Deleted At": "<DateTime>",
    "Product Description": "test-product-description
test line 2",
    "Product Discountable": true,
    "Product External Id": "<ID>",
    "Product Handle": "base-product",
    "Product Height": "",
    "Product Hs Code": "",
    "Product Id": "<ID>",
    "Product Image 1": "test-image.png",
    "Product Image 2": "test-image-2.png",
    "Product Is Giftcard": false,
    "Product Length": "",
    "Product Material": "",
    "Product Mid Code": "",
    "Product Origin Country": "",
    "Product Status": "draft",
    "Product Subtitle": "",
    "Product Tag 1": "tag-123",
    "Product Tag 2": "tag-456",
    "Product Thumbnail": "test-image.png",
    "Product Title": "Base product",
    "Product Type Id": "<ID>",
    "Product Updated At": "<DateTime>",
    "Product Weight": "",
    "Product Width": "",
    "Variant Allow Backorder": false,
    "Variant Barcode": "",
    "Variant Created At": "<DateTime>",
    "Variant Deleted At": "<DateTime>",
    "Variant Ean": "",
    "Variant Height": "",
    "Variant Hs Code": "",
    "Variant Id": "<ID>",
    "Variant Length": "",
    "Variant Manage Inventory": true,
    "Variant Material": "",
    "Variant Metadata": "",
    "Variant Mid Code": "",
    "Variant Option 1 Name": "size",
    "Variant Option 1 Value": "large",
    "Variant Option 2 Name": "color",
    "Variant Option 2 Value": "green",
    "Variant Origin Country": "",
    "Variant Price DKK": 30,
    "Variant Price EUR": 45,
    "Variant Price USD": 100,
    "Variant Product Id": "<ID>",
    "Variant Sku": "",
    "Variant Title": "Test variant",
    "Variant Upc": "",
    "Variant Updated At": "<DateTime>",
    "Variant Variant Rank": 0,
    "Variant Weight": "",
    "Variant Width": "",
  },
  {
    "Product Collection Id": "<ID>",
    "Product Created At": "<DateTime>",
    "Product Deleted At": "<DateTime>",
    "Product Description": "test-product-description
test line 2",
    "Product Discountable": true,
    "Product External Id": "<ID>",
    "Product Handle": "base-product",
    "Product Height": "",
    "Product Hs Code": "",
    "Product Id": "<ID>",
    "Product Image 1": "test-image.png",
    "Product Image 2": "test-image-2.png",
    "Product Is Giftcard": false,
    "Product Length": "",
    "Product Material": "",
    "Product Mid Code": "",
    "Product Origin Country": "",
    "Product Status": "draft",
    "Product Subtitle": "",
    "Product Tag 1": "tag-123",
    "Product Tag 2": "tag-456",
    "Product Thumbnail": "test-image.png",
    "Product Title": "Base product",
    "Product Type Id": "<ID>",
    "Product Updated At": "<DateTime>",
    "Product Weight": "",
    "Product Width": "",
    "Variant Allow Backorder": false,
    "Variant Barcode": "",
    "Variant Created At": "<DateTime>",
    "Variant Deleted At": "<DateTime>",
    "Variant Ean": "",
    "Variant Height": "",
    "Variant Hs Code": "",
    "Variant Id": "<ID>",
    "Variant Length": "",
    "Variant Manage Inventory": true,
    "Variant Material": "",
    "Variant Metadata": "",
    "Variant Mid Code": "",
    "Variant Option 1 Name": "size",
    "Variant Option 1 Value": "small",
    "Variant Option 2 Name": "color",
    "Variant Option 2 Value": "green",
    "Variant Origin Country": "",
    "Variant Price DKK": 50,
    "Variant Price EUR": 65,
    "Variant Price USD": 200,
    "Variant Product Id": "<ID>",
    "Variant Sku": "",
    "Variant Title": "Test variant 2",
    "Variant Upc": "",
    "Variant Updated At": "<DateTime>",
    "Variant Variant Rank": 0,
    "Variant Weight": "",
    "Variant Width": "",
  },
  {
    "Product Collection Id": "<ID>",
    "Product Created At": "<DateTime>",
    "Product Deleted At": "<DateTime>",
    "Product Description": "test-product-description",
    "Product Discountable": true,
    "Product External Id": "<ID>",
    "Product Handle": "proposed-product",
    "Product Height": "",
    "Product Hs Code": "",
    "Product Id": "<ID>",
    "Product Image 1": "test-image.png",
    "Product Image 2": "test-image-2.png",
    "Product Is Giftcard": false,
    "Product Length": "",
    "Product Material": "",
    "Product Mid Code": "",
    "Product Origin Country": "",
    "Product Status": "proposed",
    "Product Subtitle": "",
    "Product Tag 1": "new-tag",
    "Product Tag 2": "",
    "Product Thumbnail": "test-image.png",
    "Product Title": "Proposed product",
    "Product Type Id": "<ID>",
    "Product Updated At": "<DateTime>",
    "Product Weight": "",
    "Product Width": "",
    "Variant Allow Backorder": false,
    "Variant Barcode": "",
    "Variant Created At": "<DateTime>",
    "Variant Deleted At": "<DateTime>",
    "Variant Ean": "",
    "Variant Height": "",
    "Variant Hs Code": "",
    "Variant Id": "<ID>",
    "Variant Length": "",
    "Variant Manage Inventory": true,
    "Variant Material": "",
    "Variant Metadata": "",
    "Variant Mid Code": "",
    "Variant Option 1 Name": "size",
    "Variant Option 1 Value": "large",
    "Variant Option 2 Name": "color",
    "Variant Option 2 Value": "green",
    "Variant Origin Country": "",
    "Variant Price DKK": 30,
    "Variant Price EUR": 45,
    "Variant Price USD": 100,
    "Variant Product Id": "<ID>",
    "Variant Sku": "",
    "Variant Title": "Test variant",
    "Variant Upc": "",
    "Variant Updated At": "<DateTime>",
    "Variant Variant Rank": 0,
    "Variant Weight": "",
    "Variant Width": "",
  },
]
`;

exports[` POST /admin/products/export should export a csv file filtered by specific products 1`] = `
[
  {
    "Product Collection Id": "<ID>",
    "Product Created At": "<DateTime>",
    "Product Deleted At": "<DateTime>",
    "Product Description": "test-product-description",
    "Product Discountable": true,
    "Product External Id": "<ID>",
    "Product Handle": "proposed-product",
    "Product Height": "",
    "Product Hs Code": "",
    "Product Id": "<ID>",
    "Product Image 1": "test-image.png",
    "Product Image 2": "test-image-2.png",
    "Product Is Giftcard": false,
    "Product Length": "",
    "Product Material": "",
    "Product Mid Code": "",
    "Product Origin Country": "",
    "Product Status": "proposed",
    "Product Subtitle": "",
    "Product Tag 1": "new-tag",
    "Product Thumbnail": "test-image.png",
    "Product Title": "Proposed product",
    "Product Type Id": "<ID>",
    "Product Updated At": "<DateTime>",
    "Product Weight": "",
    "Product Width": "",
    "Variant Allow Backorder": false,
    "Variant Barcode": "",
    "Variant Created At": "<DateTime>",
    "Variant Deleted At": "<DateTime>",
    "Variant Ean": "",
    "Variant Height": "",
    "Variant Hs Code": "",
    "Variant Id": "<ID>",
    "Variant Length": "",
    "Variant Manage Inventory": true,
    "Variant Material": "",
    "Variant Metadata": "",
    "Variant Mid Code": "",
    "Variant Option 1 Name": "size",
    "Variant Option 1 Value": "large",
    "Variant Option 2 Name": "color",
    "Variant Option 2 Value": "green",
    "Variant Origin Country": "",
    "Variant Price DKK": 30,
    "Variant Price EUR": 45,
    "Variant Price USD": 100,
    "Variant Product Id": "<ID>",
    "Variant Sku": "",
    "Variant Title": "Test variant",
    "Variant Upc": "",
    "Variant Updated At": "<DateTime>",
    "Variant Variant Rank": 0,
    "Variant Weight": "",
    "Variant Width": "",
  },
]
`;

exports[` POST /admin/products/export should export a csv file with categories 1`] = `
[
  {
    "Product Category 1": "<ID>",
    "Product Collection Id": "<ID>",
    "Product Created At": "<DateTime>",
    "Product Deleted At": "<DateTime>",
    "Product Description": "test-product-description
test line 2",
    "Product Discountable": true,
    "Product External Id": "<ID>",
    "Product Handle": "base-product",
    "Product Height": "",
    "Product Hs Code": "",
    "Product Id": "<ID>",
    "Product Image 1": "test-image.png",
    "Product Image 2": "test-image-2.png",
    "Product Is Giftcard": false,
    "Product Length": "",
    "Product Material": "",
    "Product Mid Code": "",
    "Product Origin Country": "",
    "Product Status": "draft",
    "Product Subtitle": "",
    "Product Tag 1": "tag-123",
    "Product Tag 2": "tag-456",
    "Product Thumbnail": "test-image.png",
    "Product Title": "Base product",
    "Product Type Id": "<ID>",
    "Product Updated At": "<DateTime>",
    "Product Weight": "",
    "Product Width": "",
    "Variant Allow Backorder": false,
    "Variant Barcode": "",
    "Variant Created At": "<DateTime>",
    "Variant Deleted At": "<DateTime>",
    "Variant Ean": "",
    "Variant Height": "",
    "Variant Hs Code": "",
    "Variant Id": "<ID>",
    "Variant Length": "",
    "Variant Manage Inventory": true,
    "Variant Material": "",
    "Variant Metadata": "",
    "Variant Mid Code": "",
    "Variant Option 1 Name": "size",
    "Variant Option 1 Value": "large",
    "Variant Option 2 Name": "color",
    "Variant Option 2 Value": "green",
    "Variant Origin Country": "",
    "Variant Price DKK": 30,
    "Variant Price EUR": 45,
    "Variant Price USD": 100,
    "Variant Product Id": "<ID>",
    "Variant Sku": "",
    "Variant Title": "Test variant",
    "Variant Upc": "",
    "Variant Updated At": "<DateTime>",
    "Variant Variant Rank": 0,
    "Variant Weight": "",
    "Variant Width": "",
  },
  {
    "Product Category 1": "<ID>",
    "Product Collection Id": "<ID>",
    "Product Created At": "<DateTime>",
    "Product Deleted At": "<DateTime>",
    "Product Description": "test-product-description
test line 2",
    "Product Discountable": true,
    "Product External Id": "<ID>",
    "Product Handle": "base-product",
    "Product Height": "",
    "Product Hs Code": "",
    "Product Id": "<ID>",
    "Product Image 1": "test-image.png",
    "Product Image 2": "test-image-2.png",
    "Product Is Giftcard": false,
    "Product Length": "",
    "Product Material": "",
    "Product Mid Code": "",
    "Product Origin Country": "",
    "Product Status": "draft",
    "Product Subtitle": "",
    "Product Tag 1": "tag-123",
    "Product Tag 2": "tag-456",
    "Product Thumbnail": "test-image.png",
    "Product Title": "Base product",
    "Product Type Id": "<ID>",
    "Product Updated At": "<DateTime>",
    "Product Weight": "",
    "Product Width": "",
    "Variant Allow Backorder": false,
    "Variant Barcode": "",
    "Variant Created At": "<DateTime>",
    "Variant Deleted At": "<DateTime>",
    "Variant Ean": "",
    "Variant Height": "",
    "Variant Hs Code": "",
    "Variant Id": "<ID>",
    "Variant Length": "",
    "Variant Manage Inventory": true,
    "Variant Material": "",
    "Variant Metadata": "",
    "Variant Mid Code": "",
    "Variant Option 1 Name": "size",
    "Variant Option 1 Value": "small",
    "Variant Option 2 Name": "color",
    "Variant Option 2 Value": "green",
    "Variant Origin Country": "",
    "Variant Price DKK": 50,
    "Variant Price EUR": 65,
    "Variant Price USD": 200,
    "Variant Product Id": "<ID>",
    "Variant Sku": "",
    "Variant Title": "Test variant 2",
    "Variant Upc": "",
    "Variant Updated At": "<DateTime>",
    "Variant Variant Rank": 0,
    "Variant Weight": "",
    "Variant Width": "",
  },
]
`;

exports[` POST /admin/products/export should export a csv file with region prices 1`] = `
[
  {
    "Product Collection Id": "<ID>",
    "Product Created At": "<DateTime>",
    "Product Deleted At": "<DateTime>",
    "Product Description": "test-product-description",
    "Product Discountable": true,
    "Product External Id": "<ID>",
    "Product Handle": "product-with-prices",
    "Product Height": "",
    "Product Hs Code": "",
    "Product Id": "<ID>",
    "Product Image 1": "test-image.png",
    "Product Image 2": "test-image-2.png",
    "Product Is Giftcard": false,
    "Product Length": "",
    "Product Material": "",
    "Product Mid Code": "",
    "Product Origin Country": "",
    "Product Status": "draft",
    "Product Subtitle": "",
    "Product Tag 1": "tag-123",
    "Product Tag 2": "tag-456",
    "Product Thumbnail": "test-image.png",
    "Product Title": "Product with prices",
    "Product Type Id": "<ID>",
    "Product Updated At": "<DateTime>",
    "Product Weight": "",
    "Product Width": "",
    "Variant Allow Backorder": false,
    "Variant Barcode": "",
    "Variant Created At": "<DateTime>",
    "Variant Deleted At": "<DateTime>",
    "Variant Ean": "",
    "Variant Height": "",
    "Variant Hs Code": "",
    "Variant Id": "<ID>",
    "Variant Length": "",
    "Variant Manage Inventory": true,
    "Variant Material": "",
    "Variant Metadata": "",
    "Variant Mid Code": "",
    "Variant Option 1 Name": "size",
    "Variant Option 1 Value": "large",
    "Variant Option 2 Name": "color",
    "Variant Option 2 Value": "green",
    "Variant Origin Country": "",
    "Variant Price Test Region [USD]": 45,
    "Variant Price USD": 100,
    "Variant Product Id": "<ID>",
    "Variant Sku": "",
    "Variant Title": "Test variant",
    "Variant Upc": "",
    "Variant Updated At": "<DateTime>",
    "Variant Variant Rank": 0,
    "Variant Weight": "",
    "Variant Width": "",
  },
]
`;
